--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -13,4 +13,5 @@ body,
     background-image: url("../images/c19_background.jpg");
     background-size: cover;
     text-align: center;
+    height: 200px;
   }
