--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -27,25 +27,27 @@
         <!-- Build the nav-bar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="/">Home</a>
-            <a class="nav-item nav-link" href="/maps">Interactive Maps</a>
+            <!-- <a class="nav-item nav-link" href="/maps">Interactive Maps</a> -->
             <a class="nav-item nav-link" href="/charts">Interactive Charts</a>
         </nav>
         <!-- The jumbotron div -->
         <div class='jumbotron'>
-            <h1>Covid-19 Dashboard</h1>
+            <!-- <h1>Covid-19 Dashboard</h1> -->
         </div>
         <!-- The goals and purpose div -->
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-1">
-                    <h3>Purpose</h3>
+                <div class="col-md-3">
+                    <h1>Covid-19 and the burden it places on Hospitals</h1>
                 </div>
                 <div class="col-md-9">
                     <p>
-                      The purpose of this dashboard is to...
+                      Our group topic is Hospital Bed Availability, something that we chose because of its importance in the face of this Covid Pandemic, especially in regards to the difficulty of the early weeks of the pandemic where medical supplies were lacking, and there were difficulties in finding beds in hospitals to deal with the surge in patients.<br><br>
+It is this projects intention to compile a self-updating database of which it can be utilized by hospitals and governments on the local, state, and national level in keeping track of hospital bed availability as well as preventing overflow and being able to have oversight over vast regions to better handle emergencies like the pandemic.<br><br>
+By creating this project database we will be able to not only track availability of hospitals during emergencies anv normal times, but also see which hospitals would need the most resources or assistance, especially with the county data which allows us to consider the per capita ratio of hospital bed availability.
                     </p>
                 </div>
-                <div class='col-md-2'>  <!--Build the table-->
+                <!-- <div class='col-md-2'>  Build the table
                     <div class="dropdown">
                         <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                           Top 10 by county:
@@ -65,8 +67,31 @@
                         </thead>
                         <tbody></tbody>
                       </table>
-                </div>
+                </div> -->
                 
+            </div>
+            <div class='row'>
+              <div class='col-md-6'>
+                <p>
+                  <h3>Data Exploration</h3>
+                </p>
+              </div>
+              <div class='col-md-6'>
+                <p>
+                  <h3>Machine Learning Analysis</h3><br><br>
+Description of preliminary data preprocessing:<br><br>
+Both data sets were loaded into S3 buckets. String data type columns were removed from both data sets. The 'counties' data set was aggregated to show weekly totals instead of daily. All columns that reported an average from the 'hospitals' data set were removed, as the aggregation process would not return accurate results for ratios. Columns that reported 7 day coverage were dropped from the 'hospitals' data set. Age range columns were dropped from the 'hospitals' data set. The fips_date column was created for both tables which combined the collection date and the fips_code into string to give a primary key to each data set. The following word in columns of the 'hospitals' data set were abbreviated to prevent PostgreSQL from truncating the column names: confirmed, suspected, and pediatric. Negative values were converted to zero to eliminate large variances in the aggregated data. Rows in which the fips_date column did not have a match in the other data set were dropped from both data sets. Float data types were converted to integers for both data sets.<br><br>
+
+Preliminary feature of engineering:<br><br>
+Linear regression 1 model is designed to predict number of beds needs for COVID patient for facilities. Since our data is collected in weekly base, users can input past weeks data (number of patients who are or might have COVID-19) into the model to predict the number of beds that will be used for upcoming week. Linear regression model 2 model is designed to predict the number of deaths through the number of cases. The number of cases and deaths per week are selected for linear regression model and it will estimate the relationship between independent variable(cases) and one dependent variable(deaths). Additionally, for linear regression model 2, another variable (adult patients who are in ICU bed for COVID) is added to give further estimation of correlation of death and thr rest two variables.<br><br>
+
+How data was split into training and testing sets:<br><br>
+For both linear regression model, dependent variable X is reshaped to specify the number of rows and columns. They are fitted (trained) to see the patterns in the data and generate prediction of independent variable(bed needed and deaths). The additional variable (adult patients who are in ICU bed for COVID) and cases for linear regression model 2 is splited into training and testing 0.8 : 0.2. We want to keep 20% of the data subset of the entire dataset for the testing purposes and training the rest 80% for prediction. X train and y train subsets are trained and output is predicted by following tested dependent variables. The accuracy performance of the model 2 was 0.903 which we can be concluded it's prediction is accurate up to 90% of the time.<br><br>
+
+Model choice:<br><br>
+The dataset we have is manipulated for continous variables. Supervised machine learning models fits to the dataset we have and also incline to have somewhat pair variables. Thus it was difficult to presume which variables can have possible relationship each other outside of their pairs. Linear regression model can be most effective tool to analyze these paird associated variables. The limitation of our model it's linearity. Due to multiple possible causes that are not counted in our dataset, it's linearity could be temporary (vaccination status, weather and location) or irrelevant because strong correlation does not mean it is cause and effect relationship. The benefit of linear regression is that we can build and see the relationship between the variables intuitively that could have cause and effect relationship. It is easier to interpret compare to other side of machine learning methods, which can provide meaningful relationships with what dataset we have.<br><br>
+                </p>
+              </div>
             </div>
         </div>
     </div>  
