--- a/flask_app/templates/page3.html
+++ b/flask_app/templates/page3.html
@@ -27,7 +27,7 @@
         <!-- Build the nav-bar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="/">Home</a>
-            <a class="navbar-nav" href="/maps">Interactive Maps</a>
+            <!-- <a class="navbar-nav" href="/maps">Interactive Maps</a> -->
             <a class="nav-item nav-link" href="/charts">Interactive Charts</a>
         </nav>
     </div>
@@ -51,11 +51,15 @@
     </div>  
     <h1>Put Charts Here</h1>
     <div class='row'>
-        <div class='col-md-2'>
-
+        <div class='col-md-6'>
+            <div id='caseplot'>
+            </div>
         </div>
-        <div class='col-md-10'>
-            <div id='barplot'></div>
+        <!-- <div class='col-md-2'>
+
+        </div> -->
+        <div class='col-md-6'>
+            <div id='deathplot'></div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
