functional code to build charts based on entered fips code

--- a/flask_app/templates/page3.html
+++ b/flask_app/templates/page3.html
@@ -37,6 +37,14 @@
                 <!-- <form>
                     <p>Filter Search</p>
                 </form> -->
+                
+                <!-- <form action="/charts" method = "POST">
+                    <p>Enter fips code <input type = "text" name ="fc" id='fips_filter'/></p>
+                    <p>Field2 <input type = "text" name = "Field2_name" /></p>
+                    <p>Field3 <input type = "text" name = "Field3_name" /></p>
+                    <p><input type = "submit" value = "submit" /></p>
+                </form> -->
+
                 <ul class="list-group">
                     <li class="list-group-item"> <!--added items for the following-->
                         <label for="date">Enter Fips Code</label>
@@ -49,6 +57,7 @@
             </div>  
         </div>
     </div>  
+    
     <h1>Put Charts Here</h1>
     <div class='row'>
         <div class='col-md-6'>
