--- a/flask_app/templates/data.html
+++ b/flask_app/templates/data.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <div>
-    {% for key,value in form_data.items() %}
+    {% for key,value in death_data.items() %}
     <h2> {{key}}</h2>
     <p> {{value}}</p>
     {% endfor %}
