--- a/flask_app/templates/form.html
+++ b/flask_app/templates/form.html
@@ -32,7 +32,7 @@
         </nav>
     </div>
     <form action="#" method = "POST">
-        <p>Enter fips code <input type = "text" name = "fips_code" id='fips_filter'/></p>
+        <p>Enter fips code <input type = "text" name = "fc" id='fips_filter'/></p>
         <!-- <p>Field2 <input type = "text" name = "Field2_name" /></p>
         <p>Field3 <input type = "text" name = "Field3_name" /></p> -->
         <p><input type = "submit" value = "submit" /></p>
