--- a/flask_app/templates/page2.html
+++ b/flask_app/templates/page2.html
@@ -27,8 +27,9 @@
         <!-- Build the nav-bar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="/">Home</a>
-            <a class="navbar-nav" href="/maps">Interactive Maps</a>
-            <a class="nav-item nav-link" href="/charts">Interactive Charts</a>
+            <a class="navbar-nav" href="/form">Fips Form</a>
+            <!-- <a class="navbar-nav" href="/maps">Interactive Maps</a> -->
+            <!-- <a class="nav-item nav-link" href="/charts">Interactive Charts</a> -->
         </nav>
     </div>
 
