--- a/flask_app/templates/page3.html
+++ b/flask_app/templates/page3.html
@@ -27,8 +27,9 @@
         <!-- Build the nav-bar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="/">Home</a>
+            <a class="navbar-nav" href="/form">Fips Form</a>
             <!-- <a class="navbar-nav" href="/maps">Interactive Maps</a> -->
-            <a class="nav-item nav-link" href="/charts">Interactive Charts</a>
+            <!-- <a class="nav-item nav-link" href="/charts">Interactive Charts</a> -->
         </nav>
     </div>
     <div class="container-fluid">
@@ -37,7 +38,7 @@
                 <!-- <form>
                     <p>Filter Search</p>
                 </form> -->
-                
+
                 <!-- <form action="/charts" method = "POST">
                     <p>Enter fips code <input type = "text" name ="fc" id='fips_filter'/></p>
                     <p>Field2 <input type = "text" name = "Field2_name" /></p>
@@ -45,20 +46,20 @@
                     <p><input type = "submit" value = "submit" /></p>
                 </form> -->
 
-                <ul class="list-group">
-                    <li class="list-group-item"> <!--added items for the following-->
+                <!-- <ul class="list-group">
+                    <li class="list-group-item"> added items for the following
                         <label for="date">Enter Fips Code</label>
                         <input type="text" class='form-control' placeholder="01001" id="fips_code" />
                     </li>
                     <li class="list-group-item bg-dark">
                         <button id="filter-btn" type="button" class="btn btn-dark">Filter Chart</button>
                     </li>
-                </ul>
+                </ul> -->
             </div>  
         </div>
     </div>  
     
-    <h1>Put Charts Here</h1>
+    <h1></h1>
     <div class='row'>
         <div class='col-md-6'>
             <div id='caseplot'>
@@ -71,6 +72,18 @@
             <div id='deathplot'></div>
         </div>
     </div>
+    <!-- <div id="mapid"></div> -->
+    
+
+    <!-- Leaflet JavaScript -->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
+    <!-- API key -->
+    <script type="text/javascript" src="static/js/config.js"></script>
+    <!-- Our JavaScript -->
+    <script type="text/javascript" src="static/js/logic.js"></script> 
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
