--- a/flask_app/templates/form.html
+++ b/flask_app/templates/form.html
@@ -32,25 +32,47 @@
             <!-- <a class="nav-item nav-link" href="/charts">Interactive Charts</a> -->
         </nav>
     </div>
+    <div class='col-md-6'>
+        <form action="#", method="POST">
+            <fieldset>
+              <div class="form-group">
+                <label for="exampleInputPassword1" class="form-label mt-4"><h3>Fips Code</h3></label>
+                <input type="text" class="form-control" name='fc' id="fips_filter" placeholder="1001.0">
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </fieldset>
+        </form>
+    </div>
+    
     <div class="container-fluid">
         <div class="row">
-            <div class='col-md-3'> 
+            <!-- <div class='col-md-3'> 
                 <form action="#" method = "POST">
                     <p>Enter fips code <input type = "text" name = "fc" id='fips_filter'/></p>
-                    <!-- <p>Field2 <input type = "text" name = "Field2_name" /></p>
-                    <p>Field3 <input type = "text" name = "Field3_name" /></p> -->
+                    <p>Field2 <input type = "text" name = "Field2_name" /></p>
+                    <p>Field3 <input type = "text" name = "Field3_name" /></p>
                     <p><input type = "submit" value = "submit" /></p>
                 </form>
-            </div>
-            <div class='col-md-3'>
+            </div> -->
+            <div class='col-md-6'>
                 <p>
-                    <h3>Fips codes represent specific counties in the United states. Some example codes to try are:</h3><br><br>
-                        * 1001.0<br><br>
-                        * 17159.0<br><br>
-                        * 42105.0<br><br>
+                    <h3>Fips codes represent specific counties in the United states.  If you would like to look up a fips code for your county please use the following link:</h3><br><br>
+                    <a href="https://www.nrcs.usda.gov/wps/portal/nrcs/detail/or/programs/?cid=nrcs143_013697">Fips Code to County Name Converter</a>
                 </p>
             </div>
         </div>
-    </div>            
+    </div>   
+    <!-- <div class='panel-group' id='myAccordian'>
+        <div class ='panel panel-primary'>
+            <div class='panel-heading'>
+                <h3 class='panel-title' data-target='#panel-1' data-toggle='collapse' data-parent='myAccordian'>Data Exploration</h3>
+            </div>
+            <div class='panel-collapse collapse' id='panel-1'>
+                <div class='panel-body'>
+                    <p>This is a test to see if this works or not.</p>
+                </div>
+            </div>
+        </div>
+    </div>     -->
 </body>
 </html>
